[gd_scene load_steps=4 format=3 uid="uid://1wxbwiwhodqv"]

[ext_resource type="Theme" uid="uid://dql66qetxuxw7" path="res://Resources/Menus.tres" id="1_avqk0"]
[ext_resource type="Script" path="res://scenes/DeadMenu.gd" id="1_pny0a"]

[sub_resource type="LabelSettings" id="LabelSettings_m0cj0"]
font_size = 100

[node name="DeadMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_avqk0")
script = ExtResource("1_pny0a")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.980392, 0, 0.294118, 1)
layout_mode = 0
offset_right = 1921.0
offset_bottom = 1077.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -113.0
offset_right = 335.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "That's how mafia works"
label_settings = SubResource("LabelSettings_m0cj0")

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Restart"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Quit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="visibility_changed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_visibility_changed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_button_up"]
